<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="@dimen/title_width"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:text="@string/app_title"
        android:textSize="@dimen/title_text"
        />

    <Button
        android:id="@+id/app1_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/buttonColor"
        android:text="@string/app1"
        android:onClick="launchApp"/>

    <Button
        android:id="@+id/app2_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/buttonColor"
        android:text="@string/app2"/>
    <Button
        android:id="@+id/app3_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/buttonColor"
        android:text="@string/app3"/>
    <Button
        android:id="@+id/app4_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/buttonColor"
        android:text="@string/app4"/>
    <Button
        android:id="@+id/app5_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/buttonColor"
        android:text="@string/app5"/>
    <Button
        android:id="@+id/capstone_launch"
        android:layout_width="@dimen/button_width1"
        android:layout_height="@dimen/button_height1"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_vertical_margin"
        android:background="@color/capstoneButtonColor"
        android:textColor="#FFFFFF"
        android:text="@string/app6"/>
</LinearLayout>
